<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vcard_bg">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:id="@+id/qrcode_view"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qrcode_person_name"
            android:layout_gravity="center_horizontal"
            android:textSize="26sp"
            android:text="姓名"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="职位"
            android:layout_gravity="center_horizontal"
            android:id="@+id/qrcode_person_place"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/windows_bg"
        android:orientation="vertical"

        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:id="@+id/qrcode_logo"
            android:layout_marginLeft="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_wenzi"/>
        <TextView

            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qrcode_person_company"
            android:maxLines="2"
            android:text="sssssssssssssssssssssssssssssssssssssss"/>
        </LinearLayout>
        <View
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_bg_gray2"></View>
        <LinearLayout

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/action_contact_tel"/>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobilephone_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/linephone_label"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/qrcode_person_mobilephone"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1599999999"/>
                <TextView
                    android:id="@+id/qrcode_person_linephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000-77777777"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/qrcode_web"/>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_label"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/qrcode_person_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1599999999"/>
                <TextView
                    android:id="@+id/qrcode_person_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0000-77777777"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:src="@drawable/qrcode_address"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_label"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/qrcode_person_address"
                    android:text="1599999999"/>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/main_bg_gray2"></View>
    </LinearLayout>

</LinearLayout>